--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,7 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --font-manrope: "Manrope", sans-serif;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -13,7 +14,7 @@
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-manrope);
 }
 
 .heroHomeBanner {
